fix & refactor & language switching 1 modal style column-gap 2 ModalWindow types without lng: string; 3 Types for ResendLinkModal, ErrorModal, EmailConfirmationModal 4 ErrorModal with userEmail and without it 5 ResendLink:  - if noEmail  - language switching was fix(mostly by it self/ Mybe after merge) 6 delete signUpApi 7 add transation

--- a/client/src/shared/ui/Modal/children/ui/modalWindow.module.scss
+++ b/client/src/shared/ui/Modal/children/ui/modalWindow.module.scss
@@ -21,6 +21,7 @@
 		.title{
 			padding: 12px 24px ;
 			display: flex;
+      column-gap: 30px;
 			justify-content: space-between;
 			align-items: center;
 			border-bottom: 1px solid var(--dark-100, #4C4C4C);
